Add progress indicator script, enhance input.py with UTF-8 encoding, and expand Operation.ipynb with new operator examples

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -22,8 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**type**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +64,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**basic calculation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "341679d1-e77e-4f90-b499-d52507db1eef",
    "metadata": {},
    "outputs": [
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +150,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**scientific notation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -153,8 +174,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**complex number**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,47 +210,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**operation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bracbracket\n",
+      "bracbracket\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2*'brac'+'ket')  # string concatenation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**escape \"\\\\\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "don't  or  don't\n"
      ]
     }
    ],
    "source": [
-    "print(2*'brac'+'ket')  # string concatenation\n",
     "print('don\\'t',\" or \",\"don't\")  # escape character"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**raw string**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "line1\n",
-      "line2\n",
       "line1\\nline2\n"
      ]
     }
    ],
    "source": [
-    "print(\"line1\\nline2\")  # new line\n",
     "print(r\"line1\\nline2\")  # raw string"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**concatenation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -240,25 +308,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "string1 string2\n"
+      "string1string2\n"
      ]
     }
    ],
    "source": [
-    "print('string1', end=' ') # do not print new line\n",
+    "print('string1', end='') # do not print new line\n",
     "print('string2')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**multi-line**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line1\n",
+      "line2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"line1\\nline2\")  # new line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -278,8 +371,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**format by %**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141593 in integer is 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(\"%f in %s is %d\" % (math.pi,\"integer\",math.pi))  # %s for string, %d for integer, %f for float"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**format by str.format()**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "two decimal 3.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "str=\"{} {:.2f}\".format(\"two decimal\", math.pi) # default order; 2 decimal places\n",
+    "print(str)  # string format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xx5 10,000\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"{0:x>3d} {1:,}\".format(5, 10000) # ordered; fill with x, align right, width 3; comma separator\n",
+    "print(str)  # string format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.67%  56 x\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"{pos1:.2%} {pos2:^4d}x\".format(pos1=0.2567, pos2=56) # named\n",
+    "print(str)  # string format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={\"pos1\":\"hello\", \"pos2\":\"world\"}\n",
+    "str=\"{pos1} {pos2}\".format(**dict) # dictionary with **\n",
+    "print(str)  # string format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[\"hello\", \"world\"]\n",
+    "str=\"{0[0]} {0[1]}\".format(list) # list with 0[]\n",
+    "print(str)  # string format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**string as list**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -287,17 +512,111 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "w\n",
-      "d\n",
-      "wo\n",
-      "ld\n"
+      "w d\n",
+      "wo ld\n"
      ]
     }
    ],
    "source": [
     "char=\"world\";print(len(char))   # length\n",
-    "a=char[0];b=char[-1];print(a);print(b)  # string indexing\n",
-    "c=char[:2];d=char[-2:];print(c);print(d)  # string slicing with positive 2 excludied"
+    "a=char[0];b=char[-1];print(a,b)  # string indexing\n",
+    "c=char[:2];d=char[-2:];print(c,d)  # string slicing with positive 2 excludied"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**search**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "str=\"l\";word=\"hello\"\n",
+    "print(word.find(str,3,5))  # find str from 3 to 5; return -1 if not found\n",
+    "print(word.index(str,3,5))  # index str from 3 to 5; raise ValueError if not found"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**replace**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "word=\"hello\";wordnew=word.replace(\"ello\",\"i\",1) # replace all occurance with at most 1 times\n",
+    "print(wordnew)  # replace first occurance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**split**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'world !']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent=\"hello world !\";wordlist=sent.split(\" \",1) # split by space with at most 1 times\n",
+    "print(wordlist)  # split string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'world']\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiline=\"\"\"hello\n",
+    "world\"\"\"\n",
+    "print(multiline.splitlines())  # split by line without \\n; default keepends=False"
    ]
   },
   {
@@ -310,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +669,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a \\ b\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a \\\\ b\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -556,18 +892,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a', 'd', 'c', 'b'}\n",
-      "{'c', 'b'}\n",
+      "{'d', 'b', 'c', 'a'}\n",
+      "{'b', 'c'}\n",
       "{'a'}\n",
       "{'d', 'a'}\n",
-      "{'a', 'd'}\n"
+      "{'d', 'a'}\n"
      ]
     }
    ],
@@ -586,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -660,16 +996,6 @@
       "b'HelloHiHi'\n",
       "72 72\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'H'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -680,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
