Add new scripts for string manipulation, progress indication, and file handling; update Data_type and Operation notebooks

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "- ### Data type\n",
-    "Immutable: number / string / tuple\n",
+    "1. Immutable: number / string / tuple\n",
     "\n",
-    "Mutable: list / dictionary / set\n",
+    "2. Mutable: list / dictionary / set\n",
     "\n",
-    "Other: Boolen / bytes\n",
+    "3. Other: Boolen / bytes\n",
     "\n",
     " ---"
    ]
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
     }
    ],
    "source": [
-    "print(3E-2)  # scientific notation"
+    "print(3E-2)  # scientific notation (3 * 10^-2)"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**operation**"
+    "**calculation**"
    ]
   },
   {
@@ -628,25 +628,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3, 4, 5, 'f')\n",
-      "1\n",
-      "f\n",
-      "(1, 3, 5)\n"
-     ]
-    }
-   ],
    "source": [
-    "tuple=(1,2,3,4,5,'f');print(tuple)\n",
-    "print(tuple[0]);print(tuple[-1])  # tuple, immutable\n",
-    "print(tuple[::2])  # tuple slicing with steps 2"
+    "**empty tuple & tuple with 1 element**"
    ]
   },
   {
@@ -669,20 +654,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**extraction**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a \\ b\n"
+      "(1, 2, 3, 4, 5, 'f')\n",
+      "1\n",
+      "f\n",
+      "(1, 3, 5)\n"
      ]
     }
    ],
    "source": [
-    "print(\"a \\\\ b\")"
+    "tuple=(1,2,3,4,5,'f');print(tuple)\n",
+    "print(tuple[0]);print(tuple[-1])  # tuple, immutable\n",
+    "print(tuple[::2])  # tuple slicing with steps 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**calculation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 3, 4)\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1=(1,2);tuple2=(3,4)\n",
+    "tuple=tuple1+2*tuple2;print(tuple)  # list concatenation\n",
+    "tuple1==tuple2;print(tuple1==tuple2)  # list comparison"
    ]
   },
   {
@@ -694,8 +718,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**calculation**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 3, 4]\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[1,2];list2=[3,4]\n",
+    "list=list1+2*list2;print(list)  # list concatenation\n",
+    "list1==list2;print(list1==list2)  # list comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**extraction**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -703,25 +761,63 @@
      "output_type": "stream",
      "text": [
       "[3, 5]\n",
-      "[1, 6]\n",
-      "[1, 2, -3, 4, 5, 6]\n",
-      "[1, 2, -3, 4, 5, 6, 6]\n",
-      "[1, 2, -3, 4, 5, 6]\n",
-      "[1, 2, -3, 4]\n",
-      "4\n"
+      "[1, 6]\n"
      ]
     }
    ],
    "source": [
     "list=[1,2,3,4,5,6];print(list[2:-1:2]) # list slicing from pos 2 to pos -1(excluded) with step 2\n",
-    "print([list[0],list[-1]])  # list, mutable\n",
-    "list[2]=-3;print(list);list.append(6);print(list);list.pop();print(list)  # list modification\n",
-    "list[-2:]=[];print(list);print(len(list))  # list shrink"
+    "print([list[0],list[-1]])  # list, mutable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**modification**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[2, 3, 4, 5, 6]\n",
+      "[2, 3, 4]\n",
+      "[3, 4]\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[1,2,-3,4,5];list[2]=3;print(list) # list modification\n",
+    "list.append(6);print(list) # add element to list\n",
+    "list.insert(6,7);print(list)  # insert element to list\n",
+    "list.pop();print(list)  # remove last element from list\n",
+    "list.remove(1);print(list)  # remove specific value element from list\n",
+    "list[-2:]=[];print(list) # list shrink\n",
+    "del list[0];print(list)  # delete element from list\n",
+    "print(len(list))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**nesting**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -729,15 +825,55 @@
      "output_type": "stream",
      "text": [
       "[[1, 'f'], [3, 4]]\n",
-      "4\n",
-      "[1, 'f', 1, 'f', 3, 4]\n"
+      "4\n"
      ]
     }
    ],
    "source": [
     "list1=[1,'f'];list2=[3,4]\n",
-    "list=[list1,list2];print(list);print(list[1][1])  # list nesting\n",
-    "list0=2*list1+list2;print(list0)  # list concatenation"
+    "list=[list1,list2];print(list);print(list[1][1])  # list nesting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**reverse & index**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[1,2,3,4];list1=list.reverse();print(list1)  # reverse list in place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[1,2,3,4];list.reverse() # reverse witthout return\n",
+    "print (list)"
    ]
   },
   {
