--- a/Syntax/Operation.ipynb
+++ b/Syntax/Operation.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- ### Type\n",
+    "1. function\n",
+    "\n",
+    "function(*args*)\n",
+    "\n",
+    "2. method\n",
+    "\n",
+    "object.method(*args*)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### Comparison operator"
    ]
   },
