--- a/Git/git.ipynb
+++ b/Git/git.ipynb
@@ -37,7 +37,9 @@
    "source": [
     "- ### Push local update to remote\n",
     "\n",
-    "`git add` `git commit` `git push`\n",
+    "`git add .`\n",
+    "`git commit -m ‘update’` \n",
+    "`git push`\n",
     "\n",
     "---"
    ]
@@ -48,7 +50,7 @@
    "source": [
     "- ### Pull remote update to local\n",
     "\n",
-    "`git pull`\n",
+    "`git pull origin`\n",
     "\n",
     "---"
    ]
