Add progress bar script and create Syntax notebook for control statements

--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -657,6 +657,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**calculation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 3, 4)\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1=(1,2);tuple2=(3,4)\n",
+    "tuple=tuple1+2*tuple2;print(tuple)  # list concatenation\n",
+    "print(tuple1==tuple2)  # list comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**extraction**"
    ]
   },
@@ -686,27 +713,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**calculation**"
+    "**tuple comprehension**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 2, 3, 4, 3, 4)\n",
-      "False\n"
+      "<generator object <genexpr> at 0x0000012592D83040>\n",
+      "(0, 1, 2, 3, 4)\n",
+      "(0, 1, 2, 3, 4)\n"
      ]
     }
    ],
    "source": [
-    "tuple1=(1,2);tuple2=(3,4)\n",
-    "tuple=tuple1+2*tuple2;print(tuple)  # list concatenation\n",
-    "tuple1==tuple2;print(tuple1==tuple2)  # list comparison"
+    "a=(x for x in range(5));print(a)  # generator\n",
+    "print(tuple(a))  # generator\n",
+    "b=tuple(x for x in range(5));print(b)  # generator\n"
    ]
   },
   {
@@ -880,33 +908,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "- ### Dictionary"
+    "**list comprehensions**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n",
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[x for x in range(5)];print(list)  # list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['B', 'C', 'D']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=['ab','b','c','d'];\n",
+    "list1=[a.upper() for a in list if len(a)==1];print(list1)  # list comprehension with condition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- ### Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**empty dictionary**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={};print(d)  # dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**creation by mapping using '[ ]'**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{'x': 'y'}\n",
       "y\n"
      ]
     }
    ],
    "source": [
-    "d={};print(d)  # dictionary\n",
-    "d['x']='y';print(d);print(d['x'])  # dictionary modification"
+    "d['x']='y';print(d);print(d['x'])  # dictionary creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**creation by {key:value} pairs**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -928,6 +1034,13 @@
     "print(person.keys());print(person.values())  # dictionary keys and values\n",
     "print(person.items());print(person.popitem())  # dictionary items\n",
     "print(person.get('name'),person.get('salary'))  # prevents KeyError if key doesn't exist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**creation by dict(key=value) without ' ' for key**"
    ]
   },
   {
@@ -962,6 +1075,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**dictionary comprehension**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -981,25 +1101,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 3, 'b': 2, 'c': 4}\n"
-     ]
-    }
-   ],
-   "source": [
-    "dict1 = {\"a\": 1, \"b\": 2}\n",
-    "dict2 = {\"a\": 3, \"c\": 4}\n",
-    "dict1.update(dict2);print(dict1)  # dictionary update"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1008,22 +1109,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**empty set & creation by set()**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set()\n",
-      "{1, 2, 3}\n"
+      "set()\n"
      ]
     }
    ],
    "source": [
-    "setnull=set();print(setnull)  # empty set\n",
+    "setnull=set();print(setnull)  # empty set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**creation by {elmt}**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "set1={1,2,3,3};print(set1)  # set excludes duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**calculation**"
    ]
   },
   {
@@ -1052,8 +1181,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**modification**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=set([1,2,3]);a.add(4);print(a)  # add element to set\n",
+    "a.update([1,2]);print(a)  # update set with list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3}\n",
+      "{2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=set([1,2,3]);a.remove(1);print(a)  # remove element from set\n",
+    "a.discard(4);print(a)  # discard element from set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**set comprehension**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=set(x for x in range(5));print(a)  # set comprehension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "- ### Boolen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**== & =!**"
    ]
   },
   {
@@ -1076,6 +1281,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**bool<->int**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1092,6 +1304,13 @@
    "source": [
     "print(bool('a'),bool([]))  # boolean conversion\n",
     "print(int(True),int(False))  # boolean conversion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**calculation**"
    ]
   },
   {
@@ -1120,6 +1339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**b'xxx'**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1138,6 +1364,13 @@
     "x=bytes('Hello',encoding='utf-8');print(x) #bytes\n",
     "y=b'Hi';print(x+2*y)\n",
     "print(x[0],ord('H'))  # byte indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ord()<->chr()**"
    ]
   },
   {
